# antlr4-c-runtime

./: Antlr4-c.files  Antlr4-c.includes  CMakeLists.txt  LICENCE  README.md
docs/: doxygen.config
lib/: CMakeLists.txt
lib/runtime/: CMakeLists.txt  Config.h.in  char-stream-interface.c  char-stream-interface.h  file-stream.c  file-stream.h  input-stream.c  input-stream.h  int-stream-interface.c  int-stream-interface.h  runtime.h  types.h
lib/runtime/misc/: CMakeLists.txt  debug.c  debug.h  macro.h  object.c  object.h  type.c  type.h
lib/runtime/tree/: CMakeLists.txt  tree.c  tree.h
src/: CMakeLists.txt
src/demo/: CMakeLists.txt  main.c
tools/: build.sh
